k3s/clickhouse-staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse-staging
  namespace: clickhouse-staging
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clickhouse-staging
  template:
    metadata:
      labels:
        app: clickhouse-staging
    spec:
      nodeSelector:
        kubernetes.io/hostname: bethany
      containers:
        - name: clickhouse
          image: clickhouse/clickhouse-server:24.12-alpine
          ports:
            - containerPort: 8123
              name: http
            - containerPort: 9000
              name: native
          volumeMounts:
            - name: stats-data
              mountPath: /var/lib/clickhouse
            - name: config
              mountPath: /etc/clickhouse-server/users.d/users.xml
              subPath: users.xml
            - name: config
              mountPath: /etc/clickhouse-server/config.d/config.xml
              subPath: config.xml
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
                - SYS_NICE
          resources:
            limits:
              memory: "16Gi"
            requests:
              memory: "2Gi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /ping
              port: 8123
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 8123
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 1
      volumes:
        - name: stats-data
          persistentVolumeClaim:
            claimName: clickhouse-staging-pvc
        - name: config
          configMap:
            name: clickhouse-staging-config

---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse-staging-service
  namespace: clickhouse-staging
spec:
  type: ClusterIP
  selector:
    app: clickhouse-staging
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
    - name: native
      port: 9000
      targetPort: 9000
      protocol: TCP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: clickhouse-staging-http
  namespace: clickhouse-staging
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`clickhouse-staging.home.net`)
    kind: Rule
    services:
    - name: clickhouse-staging-service
      port: 8123
